--- a/spec/dummy/config/database.yml
+++ b/spec/dummy/config/database.yml
@@ -12,14 +12,6 @@
 # Configure Using Gemfile
 # gem 'pg'
 #
-development:
-  adapter: postgresql
-  encoding: unicode
-  database: dummy_development
-  pool: 5
-  username: dummy
-  password:
-
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
@@ -38,18 +30,25 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  adapter: postgresql
-  encoding: unicode
-  database: dummy_test
-  pool: 5
-  username: dummy
-  password:
+<%= file = File.join(Rails.root, "config", "dev_database.yml"); File.exist?(file) ? IO.read(file) : <<-END_CONFIG
 
-production:
-  adapter: postgresql
-  encoding: unicode
-  database: dummy_production
-  pool: 5
-  username: dummy
-  password:
+development:
+ adapter: postgresql
+ database: tandem_development
+ username: #{ENV['USER']}
+ host: localhost
+
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
+test: &test
+ adapter: postgresql
+ database: tandem_test
+ username: #{ENV['USER']}
+ host: localhost
+
+cucumber:
+  <<: *test
+
+END_CONFIG
+%>
