--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,5 @@ spec/dummy/log
 spec/dummy/db/*.sqlite3
 spec/dummy/tmp
 spec/dummy/config/dev_database.yml
+spec/dummy/public/assets/images
 *.rbc
