Try adding a password line in database.yml to get semaphore working

--- a/spec/dummy/config/database.yml
+++ b/spec/dummy/config/database.yml
@@ -36,6 +36,7 @@ development:
  adapter: postgresql
  database: tandem_development
  username: #{ENV['USER']}
+ password:
  host: localhost
 
 # Warning: The database defined as "test" will be erased and
@@ -45,6 +46,7 @@ test: &test
  adapter: postgresql
  database: tandem_test
  username: #{ENV['USER']}
+ password:
  host: localhost
 
 cucumber:
