--- a/spec/dummy/config/database.yml
+++ b/spec/dummy/config/database.yml
@@ -34,9 +34,9 @@
 
 development:
  adapter: postgresql
- database: tandem_development
- username: #{ENV['USER']}
- password:
+ database: #{ENV['DATABASE_NAME_DEVELOPMENT'] || 'tandem_development'}
+ username: #{ENV['DATABASE_USERNAME'] || ENV['USER']}
+ password: #{ENV['DATABASE_PASSWORD']}
  host: localhost
 
 # Warning: The database defined as "test" will be erased and
@@ -44,9 +44,9 @@ development:
 # Do not set this db to the same as development or production.
 test: &test
  adapter: postgresql
- database: tandem_test
- username: #{ENV['USER']}
- password:
+ database: #{ENV['DATABASE_NAME_TEST'] || 'tandem_test'}
+ username: #{ENV['DATABASE_USERNAME'] || ENV['USER']}
+ password: #{ENV['DATABASE_PASSWORD']}
  host: localhost
 
 cucumber:
