--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ rvm:
   - "1.9.3"
   - "2.0.0"
 
+env:
+  - DATABASE_USERNAME=postgres
+
+before_script:
+  - psql -c 'create database tandem_test;' -U postgres
+
 gemfile:
   - Gemfile
   - gemfiles/Gemfile.rails-3.2.x-jquery-1.8.x
