--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ env:
   - DATABASE_USERNAME=postgres
 
 before_script:
-  - psql -c 'create database tandem_test;' -U postgres
+  - rake db:create
+  - rake db:test:prepare
 
 gemfile:
   - Gemfile
